fixed footer alignments, added see more button in blog block, some css adjustments - WAAW-111

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -477,6 +477,19 @@ height-observer, visibility-progress, scroll-area, video-media, model-media, med
   padding: var(--spacing-5);
 }
 
+.blog-post-card__info-see-more {
+  font-size: var(--text-sm);
+  text-decoration: underline;
+}
+
+.blog-post-card__info-see-more:hover {
+  color: #000;
+}
+
+.blog-post-card__text-content {
+  font-size: var(--text-sm);
+}
+
 @media screen and (min-width: 700px) {
   .blog-post-card {
     --blog-post-card-badge-spacing: var(--spacing-4);
@@ -4268,6 +4281,7 @@ split-lines {
   flex-wrap: wrap;
   column-gap: 1rem;
   justify-content: center;
+  line-height: 1.4;
 }
 
 .announcement-bar__static-list .announcement-bar__text a {
@@ -5527,7 +5541,7 @@ split-lines {
   --text-color: var(--footer-text);
   --footer-padding-block: var(--spacing-12);
   --footer-part-gap: var(--spacing-10);
-  --footer-block-list-gap: var(--spacing-10);
+  --footer-block-list-gap: var(--spacing-4);
   --footer-block-gap: var(--spacing-4);
   --footer-aside-gap: var(--spacing-10);
   background: rgb(var(--background));
@@ -5536,12 +5550,22 @@ split-lines {
   padding-block-end: var(--footer-padding-block);
 }
 
+.footer__badges__text{
+  font-size: var(--text-sm);
+  font-weight: 600;
+}
+
+.footer__partner-icon:last-child{
+  height: 25px;
+  width: auto;
+}
+
 .footer__wrapper {
   display: grid;
 }
 
 .footer__block-list {
-  gap: var(--footer-block-list-gap);
+  gap: 15px;
   align-items: start;
   justify-content: var(--footer-block-list-justify-content, start);
   grid: auto-flow dense / repeat(2, minmax(0, 1fr));
@@ -5566,6 +5590,17 @@ split-lines {
   max-width: 250px;
 }
 
+.footer__block--menu li a,
+.footer__block p {
+  font-size: var(--text-sm);
+}
+
+.footer__payment-icons,
+.footer__partner-icons,
+.footer__badges {
+  justify-content: center;
+}
+
 .footer__aside {
   gap: var(--footer-aside-gap);
   display: grid;
@@ -5576,6 +5611,12 @@ split-lines {
   align-items: center;
   gap: var(--spacing-8);
   display: grid;
+}
+
+.icon-contact-grid{
+  display: grid;
+  grid-template-columns: 27px 1fr;
+  font-size: var(--text-sm);
 }
 
 @media screen and (min-width: 700px) {
@@ -7465,6 +7506,16 @@ split-lines {
   margin-block-end: 0;
 }
 
+.section-boxed .product-info__separator{
+  display: none;
+}
+
+@media screen and (min-width: 700px) {
+  .section-boxed .product-info__separator{
+    display: block;
+  }
+}
+
 .product-info__accordion {
   --product-info-block-spacing: 0;
 }
@@ -9195,6 +9246,14 @@ split-lines {
   box-decoration-break: clone;
   -webkit-background-clip: text;
   background-clip: text;
+  position: relative;
+  bottom: 20px;
+}
+
+@media screen and (min-width: 1000px) {
+  .text-gradient {
+    bottom: 10px;
+  }
 }
 
 .text-stroke.text-gradient {
@@ -10147,14 +10206,16 @@ split-lines {
   padding-block-end: var(--spacing-6);
 }
 
+.shopify-section--footer-logo{
+  border-bottom: 1px solid #f6f6f6;
+}
+
 .footer-logo {
   width: 100%;
   max-width: var(--footer-logo-width);
 }
 
 .footer-logo__image {
-  width: 100%;
-  height: auto;
   display: block;
 }
 
@@ -10169,10 +10230,8 @@ split-lines {
 .footer-logo--center {
   margin-inline-start: auto;
   margin-inline-end: auto;
-}
-
-.shopify-section--footer-logo {
-  margin-bottom: 1px;
+  display: flex;
+  justify-content: center;
 }
 
 .shopify-section--footer-ending {
